# mysql-mcp-server

./: README.md
.github/workflows/: publish-mysql-mcp-server.yml
mysql_server/: .gitignore  README.md  pyproject.toml  server.py
mysql_server/src/mysql_mcp_server/: __init__.py  server.py
mysql_server/tests/: test_index_enforcement.py
